--- a/style.css
+++ b/style.css
@@ -173,10 +173,55 @@ nav button
     font-size: 40px;
 }
 
+.according
+{
+    margin: 60px auto;
+    width: 100%;
+    max-width: 750px;
 
+}
+.according li{
+    list-style: none;
+    width: 100%;
+    padding: 5px;
 
+}
 
+.according li label
+{
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    font-size: 18px;
+    font-weight: 500;
+    background: #303030;
+    margin-bottom: 2px;
+    cursor: pointer;
+    position: relative;
+}
+label::after
+{
+content: '+';
+font-size: 34px;
+position: absolute;
+right: 20px;
+}
+  
+input[type="redio"]{
+    display: none;
+}
+.according  .content{
+    background:#303030;
+    text-align: left;
+    padding: 0 20px;
+    max-height: 0;
+    overflow:hidden ;
+    transition: max-height 0.5s , padding 0.5s;
+}
 
-
-
+.according input[type="redio"]:checked + label + .content
+{
+    max-height: 600px;
+    padding: 30px 20px;
+}
 
